Add email letters

--- a/index.html
+++ b/index.html
@@ -46,9 +46,20 @@
                         <li><a href="https://galachernikova.github.io/mntn-landing/"><img src="./images/landingscreen.png" alt="landing"></a></li>
                         <li><a href="https://galachernikova.github.io/travel/"><img src="./images/travelscreen.png" alt="travel"></a></li>
                         <li><a href="https://galachernikova.github.io/prabot-landing/"><img src="./images/prabotscreen.png" alt="prabot"></a></li>
-                        <!-- <li><a href="#">5</a><img src="#" alt="5"></li>
-                        <li><a href="#">6</a><img src="#" alt="6"></li> -->
+                        <li><a href="https://galachernikova.github.io/light-dark-theme-page/"><img src="./images/lightdarkscreen.png" alt="lightdark"></a></li>
 
+                        <!-- <li><a href="#">6</a><img src="#" alt="6"></li>
+                        <li><a href="#">7</a><img src="#" alt="6"></li>
+                        <li><a href="#">8</a><img src="#" alt="6"></li>
+                        <li><a href="#">9</a><img src="#" alt="6"></li> -->
+
+                    </ul>
+
+                    <h3>Email letters</h3>
+                    <ul class="preview-list">
+                        <li><a href="https://galachernikova.github.io/email-voucher/"><img src="./images/email-voucherscr.png" alt="voucher"></a></li>
+                        <li><a href="https://galachernikova.github.io/email-crm/"><img src="./images/email-crmscr.png" alt="crm"></a></li>
+                        <li><a href="https://galachernikova.github.io/email-order/"><img src="./images/email-orderscr.png" alt="order"></a></li>
                     </ul>
                 </div>
                 
