--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li><a href="https://galachernikova.github.io/light-dark-theme-page/"><img src="./images/lightdarkscreen.png" alt="lightdark"></a></li>
 
                         <li><a href="https://galachernikova.github.io/enterprise-landing/"><img src="./images/enterprisescreen.png" alt="enterprise"></a></li>
-                        <li><a href="https://galachernikova.github.io/construction-page/">7<img src="./images/constructionscreen.png" alt="construction"></a></li>
+                        <li><a href="https://galachernikova.github.io/construction-page/"><img src="./images/constructionscreen.png" alt="construction"></a></li>
                         <!-- <li><a href="#">8</a><img src="#" alt="6"></li>
                         <li><a href="#">9</a><img src="#" alt="6"></li> -->
 
