--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                         <li><a href="https://galachernikova.github.io/enterprise-landing/"><img src="./images/enterprisescreen.png" alt="enterprise"></a></li>
                         <li><a href="https://galachernikova.github.io/construction-page/"><img src="./images/constructionscreen.png" alt="construction"></a></li>
-                        <!-- <li><a href="#">8</a><img src="#" alt="6"></li>
-                        <li><a href="#">9</a><img src="#" alt="6"></li> -->
+                        <!-- <li><a href="#"></a><img src="#" alt=""></li>
+                        <li><a href="#"></a><img src="#" alt=""></li> -->
 
                     </ul>
 
