--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <a href="#preview">Check my projects down below &darr;</a>
                 </div> 
                 
-                <!-- add links, preview: 840x615 -->
                 <div class="preview" id="preview">
                     <h1>My projects</h1>       
                     <ul class="preview-list">
@@ -45,13 +44,14 @@
                         <li><a href="https://galachernikova.github.io/donate-books-project/"><img src="./images/booksscreen.png" alt="books"></a></li>
                         <li><a href="https://galachernikova.github.io/mntn-landing/"><img src="./images/landingscreen.png" alt="landing"></a></li>
                         <li><a href="https://galachernikova.github.io/travel/"><img src="./images/travelscreen.png" alt="travel"></a></li>
+
                         <li><a href="https://galachernikova.github.io/prabot-landing/"><img src="./images/prabotscreen.png" alt="prabot"></a></li>
                         <li><a href="https://galachernikova.github.io/light-dark-theme-page/"><img src="./images/lightdarkscreen.png" alt="lightdark"></a></li>
-
                         <li><a href="https://galachernikova.github.io/enterprise-landing/"><img src="./images/enterprisescreen.png" alt="enterprise"></a></li>
+                        
                         <li><a href="https://galachernikova.github.io/construction-page/"><img src="./images/constructionscreen.png" alt="construction"></a></li>
-                        <!-- <li><a href="#"></a><img src="#" alt=""></li>
-                        <li><a href="#"></a><img src="#" alt=""></li> -->
+                        <li><a href="https://galachernikova.github.io/online-courses/"><img src="./images/learnscreen.png" alt="online courses"></a></li>
+                        <li><a href="https://galachernikova.github.io/online-shop/"><img src="./images/shopscreen.png" alt="shop"></a></li>
 
                     </ul>
 
@@ -77,9 +77,7 @@
                                 <li>JAVA basic</li>
                                 <li>JavaScript basic</li>
                                 <li>Git</li>
-                                <li>Manual QA</li>
-                                <li>Atlassian Jira</li>
-                                <li>Postman</li>
+                                <li>Manual & Auto QA</li>
                             </ul>    
                         </li>
 
